# AsterIDE

./: CODE_OF_CONDUCT  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  README  README.md  ROADMAP.md  SECURITY  TODO.md  flake.nix  justfile
.github/workflows/: build.yml
assets/appIcon/icns/: asteride-macOS-ClearDark-1024x1024@1x.icns  asteride-macOS-ClearLight-1024x1024@1x.icns  asteride-macOS-Dark-1024x1024@1x.icns  asteride-macOS-Default-1024x1024@1x.icns  asteride-macOS-TintedDark-1024x1024@1x.icns  asteride-macOS-TintedLight-1024x1024@1x.icns
core/src/: editor.rs
crates/command_palette/: Cargo.toml
crates/command_palette/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  cursor.rs  editor.rs  lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: command_palette.rs  main.rs  search.rs  settings.rs  tabs.rs  theme.rs
crates/editor/src/settings/: main.rs  mod.rs
crates/lsp/: Cargo.toml
crates/plugins/: Cargo.toml
crates/plugins/more/: NOTE.md
crates/plugins/src/: lib.rs
crates/scm/: main.rs
crates/scm/git/: main.rs
crates/scm/mercurial/: main.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  ui.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tabs/: Cargo.toml
crates/tabs/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: main.rs
crates/theme/: Cargo.toml
editor/: Cargo.toml
editor/src/: tabs.rs  theme.rs
lsp/src/: lib.rs
nix/: buildPackage.nix  devShell.nix
plugins/: Cargo.toml
scripts/: build.sh
(+20 files in other folders)
