[package]
name = "asteride"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }

eframe = "0.34.1"
egui = "0.34.1"
rfd = "0.14"
regex = "1.11"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

grep = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"