[package]
name = "asteride"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "AsterIDE"
identifier = "dev.playfairs.asteride"
icon = ["../../assets/appIcon/icns/asteride-macOS-TintedLight-1024x1024@1x.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) 2026"
category = "Developer"
short_description = "A Simple Text Editor written in Rust."
long_description = """
A Simple Text Editor written in Rust, made using eGUI, and eframe.
"""

[dependencies]
command_palette = { path = "../command_palette" }
core = { path = "../core" }
search = { path = "../search" }
settings = { path = "../settings" }
tabs = { path = "../tabs" }
theme = { path = "../theme" }

eframe = "0.34.1"
egui = "0.34.1"
egui_code_editor = "0.2"
rfd = "0.14"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

grep = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }